# tauri-watch-coin

./: LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: main.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
